logs/django-newrelic-extensions.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_newrelic_extensions-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/newrelic'...
Listing './lib/python3.5/site-packages/newrelic/admin'...
Listing './lib/python3.5/site-packages/newrelic/api'...
Listing './lib/python3.5/site-packages/newrelic/bootstrap'...
Listing './lib/python3.5/site-packages/newrelic/common'...
Listing './lib/python3.5/site-packages/newrelic/core'...
Listing './lib/python3.5/site-packages/newrelic/extras'...
Listing './lib/python3.5/site-packages/newrelic/extras/framework_django'...
Listing './lib/python3.5/site-packages/newrelic/extras/framework_django/templatetags'...
Listing './lib/python3.5/site-packages/newrelic/hooks'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado_r3'...
Listing './lib/python3.5/site-packages/newrelic/hooks/framework_tornado_r4'...
Listing './lib/python3.5/site-packages/newrelic/network'...
Listing './lib/python3.5/site-packages/newrelic/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/newrelic/packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/newrelic/packages/wrapt'...
Listing './lib/python3.5/site-packages/newrelic/samplers'...
Listing './lib/python3.5/site-packages/newrelic-2.100.0.84.egg-info'...
Listing './lib/python3.5/site-packages/newrelicextensions'...
Compiling './lib/python3.5/site-packages/newrelicextensions/middleware.py'...
***   File "./lib/python3.5/site-packages/newrelicextensions/middleware.py", line 9
    print '[new relic extensions]: %s' % message
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
